syntax = "proto3";

/*Namespace per i Timestamp C#*/
/*import "google/protobuf/duration.proto";*/
/*Namespace per i DateTime C#*/
import "google/protobuf/timestamp.proto";
/*Campo Any e OneOf*/
/*import "google/protobuf/any.proto"; */
/*Namespace per i tipi nullable ESPLICITI (double?) => google.protobuf.DoubleValue C#*/
/*import "google/protobuf/wrappers.proto";*/

import "Protos/product-models.proto";

option csharp_namespace = "VendingMachine.Service.Products.ServiceCommunications";

package VendingMachine.Service.Products.ServiceCommunications;


message ProductItemsServiceModel {
	int32 Id = 1;
	ProductServiceModel Product = 2;
	google.protobuf.Timestamp Purchased = 3;
	google.protobuf.Timestamp Sold = 4;
	google.protobuf.Timestamp ExpirationDate = 5;
	GrossPriceServiceModel SoldPrice = 6;
}

message GetProductItemsRequest {
	repeated int32 ProductIds = 1;
}

message ExistProductItemRequest {
	int32 ProductItemId = 1;
}

message ExistProductItemResponse {
	bool Exist = 1;
}

