syntax = "proto3";

import "Protos/product-items-models.proto";

option csharp_namespace = "VendingMachine.Service.Products.ServiceCommunications";

package VendingMachine.Service.Products.ServiceCommunications;

service ProductItems {
	rpc GetProductItems (GetProductItemsRequest) returns (stream ProductItemsServiceModel);
	rpc ExistProductItem (ExistProductItemRequest) returns (ExistProductItemResponse);
}
